# qc-osi-trace

./: README.md  pyproject.toml
qc_ositrace/: main.py
qc_ositrace/checks/deserialization/: deserialization_checker.py
qc_ositrace/checks/osirules/: osirules_checker.py
tests/: test_deserialization_checks.py  test_osirules_checks.py  test_setup.py
tests/data/customrules/: customrules.yml
tests/data/deserialization_expected_version/: deserialization_expected_version_360.mcap
